
2006-03-16 Michal Čihař  <michal@cihar.com>
    * libraries/select_server.lib.php: Move end of fieldset to correct place
      after button (patch #1450559).
    * libraries/plugin_interface.lib.php: Add support for hidden inputs.
    * libraries/common.lib.php: Do not forget wrongly configured servers,
      otherwise user gets warning only on first access (RFE #1451521).

2006-03-15 Michal Čihař  <michal@cihar.com>
    * libraries/export/htmlexcel.php: Fix output handling (bug #1450555).

2006-03-14 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update, use binary prefixes.
    * lang/english: Nothing to translate here.
    * scripts/setup.php: Fix config loading (bug #1449821).

2006-03-14 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Use correct binary prefixes for byte units.

2006-03-14 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1449715, loading of binary data very slow
    * server_privileges.php: compatibility with MySQL < 4.0.2
    * server_databases.php: bug #1445991, compatibility with MySQL 3.23.52

2006-03-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php, /common.lib.php: bug #1445120, 
      cookie login not working on IIS

2006-03-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: reactivate in-line image display
    * transformation_wrapper.php: bug #1444121, octetstream download fails
      on versions of PHP accepting only one line per header,
      thanks to Ryan Schmidt

2006-03-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php, tbl_create.php,
      tbl_properties_operations.php: bug #1444892, TYPE deprecated in 
      MySQL 5.1
    ### 2.8.0.1 released from branch MAINT_2_8_0

2006-03-07 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: bug #1444867, does not load config.inc.php
      under PHP < 4.3.0, thanks to Julian Ladisch - julianladisch
